# x

./: .gitignore  .release-please-manifest.json  commitlint.config.js  release-please-config.json
.github/workflows/: commitlint.yml  release-please.yml
content_generation/readme_diy/: bun.lockb  package.json
emulation/zmu/: build.zig  build.zig.zon  flake.nix  opcode_example.zig
gbscraper/: go.mod  go.sum  main.go
gbscraper/cmd/: export.go  root.go  scrape.go  search.go
gpu_computing/wheat/: .gitignore  CHANGELOG.md  README  build.zig  build.zig.zon  flake.nix
gpu_computing/zig_tests/: build.zig  build.zig.zon  flake.nix
graph_walking/wdw/: Cargo.toml  README.md
node_tooling/silo/: README  bun.lockb  flake.nix  package.json
packaging/celeste_flake/: flake.nix
packaging/snowblock/: flake.nix
portfolios/portfolio/: .gitignore  astro.config.mjs  flake.nix  package.json  shift_jis.txt
portfolios/portfolio2/: .gitignore  astro.config.ts  bun.lockb  components.json  (+4 more)
scraping/gbscraper_old/: .gitignore  Cargo.toml  shell.nix  test_hash.nix
scraping/gbscraper_old/src/: main.rs
system_tooling/isod/: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
system_tooling/isod/src/: cli.rs  config.rs  lib.rs  main.rs  usb.rs
system_tooling/isod/src/download/: checksum.rs  engine.rs  manager.rs  mod.rs  progress.rs  torrent.rs
system_tooling/isod/src/handlers/: add.rs  autoupdate.rs  clean.rs  config.rs  download.rs  info.rs  list.rs  mod.rs  remove.rs  search.rs  sync.rs  update.rs
system_tooling/isod/src/registry/: mod.rs  sources.rs  version_detection.rs
system_tooling/isod/src/registry/distros/: arch.rs  debian.rs  fedora.rs  mod.rs  ubuntu.rs
system_tooling/isod/tests/: integration_test.rs
(+755 files in other folders)
