[package]
name = "celeste-nix-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream", "query"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1.0"
futures-util = "0.3"
governor = "0.10"
indicatif = "0.18"
tempfile = "3"
zip = "0.6.6"
